fix: meanmenu spacing

--- a/css/style.css
+++ b/css/style.css
@@ -3872,6 +3872,7 @@ body.admin-bar .header-menu-area.sticky_menu {
 
 .mean-container .mean-nav ul li ul {
   list-style: none;
+  padding-left: 0;
 }
 
 .mean-container .mean-nav ul li a {
