--- a/sass/modules/_meanmenu.scss
+++ b/sass/modules/_meanmenu.scss
@@ -30,6 +30,7 @@
 }
 .mean-container .mean-nav ul li ul {
   list-style: none;
+  padding-left: 0;
 }
 .mean-container .mean-nav ul li a {
   width: 100%;
